syntax = "proto3";

option java_multiple_files = true;
option java_package = "sep3.project.protobuf";

service TagService{
  rpc GetPostTag(RequestGetPostTag) returns (ResponseGetPostTag);
  rpc GetTagList(RequestGetTagList) returns(ResponseGetTagList);
}

message RequestGetPostTag
{
  optional int32 postId = 1;
  optional string tagContains = 2;
}

message ResponseGetPostTag{
  repeated PostTagData tags = 1;
}

message PostTagData{
  int32 postId = 1;
  string tagContains = 2;
}

message RequestGetTagList
{
  optional string tagContains = 1;
}

message ResponseGetTagList{
  repeated TagListData tags = 1;
}
message TagListData{
  string tagContains = 1;
}